# fake_robot_pose

./: CMakeLists.txt  package.xml
launch/: fake_robot_pose.launch  odom_robot_pose_launch.xml  static_robot_pose.launch  static_robot_pose_launch.xml
src/: fake_robot_pose.cpp  odom_robot_pose.cpp  static_robot_pose.cpp
